feat: initial fastify endpoints

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "docs",
+  "name": "api",
   "version": "0.1.0",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3001",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint --max-warnings 0",
+    "dev": "tsx watch src/index.ts",
+    "build": "tsup",
+    "start": "node dist/index.js",
+    "lint": "eslint . --max-warnings 0",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
-    "next": "^15.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "@fastify/multipart": "^9.2.1",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.15.3",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
     "eslint": "^9.34.0",
+    "tsup": "^8.3.5",
+    "tsx": "^4.19.2",
     "typescript": "5.9.2"
   }
 }
