--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,17 +11,18 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@fastify/multipart": "^9.2.1",
-    "dotenv": "^16.4.7",
-    "fastify": "^5.2.0"
+    "@fastify/multipart": "9.2.1",
+    "dotenv": "16.4.7",
+    "fastify": "5.2.0",
+    "inngest": "3.44.3"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^22.15.3",
-    "eslint": "^9.34.0",
-    "tsup": "^8.3.5",
-    "tsx": "^4.19.2",
+    "@types/node": "22.15.3",
+    "eslint": "9.34.0",
+    "tsup": "8.3.5",
+    "tsx": "4.19.2",
     "typescript": "5.9.2"
   }
 }
