feat: set up embedding and logging

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@fastify/multipart": "9.2.1",
+    "@langchain/core": "^1.0.1",
+    "@langchain/openai": "^1.0.0",
     "dotenv": "16.4.7",
     "fastify": "5.2.0",
-    "inngest": "3.44.3"
+    "inngest": "3.44.3",
+    "pdf-parse": "^2.4.5"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
