feat: adds supabase storage and uploading

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,1 +1,13 @@
 PORT=3001
+
+# Supabase Configuration
+SUPABASE_URL=your_supabase_project_url
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+SUPABASE_STORAGE_BUCKET=your_bucket_name
+
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key
+
+# Inngest Configuration (optional)
+INNGEST_EVENT_KEY=your_inngest_event_key
+INNGEST_SIGNING_KEY=your_inngest_signing_key
