--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "concurrently \"tsx watch src/index.ts\" \"pnpm dlx inngest-cli@latest dev\" --names \"api,inngest\" --prefix-colors \"blue,magenta\"",
     "build": "tsup",
     "start": "node dist/index.js",
     "lint": "eslint . --max-warnings 0",
@@ -12,17 +12,19 @@
   },
   "dependencies": {
     "@fastify/multipart": "9.2.1",
-    "@langchain/core": "^1.0.1",
-    "@langchain/openai": "^1.0.0",
+    "@langchain/core": "1.0.1",
+    "@langchain/openai": "1.0.0",
+    "@supabase/supabase-js": "2.76.1",
     "dotenv": "16.4.7",
     "fastify": "5.2.0",
     "inngest": "3.44.3",
-    "pdf-parse": "^2.4.5"
+    "pdf-parse": "2.4.5"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "22.15.3",
+    "concurrently": "9.2.1",
     "eslint": "9.34.0",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
