--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"tsx watch src/index.ts\" \"pnpm dlx inngest-cli@latest dev\" --names \"api,inngest\" --prefix-colors \"blue,magenta\"",
+    "dev": "concurrently \"tsx watch src/index.ts\" \"pnpm dlx inngest-cli@latest dev --no-discovery -u http://localhost:3001/api/inngest\" --names \"api,inngest\" --prefix-colors \"blue,magenta\"",
     "build": "tsup",
     "start": "node dist/index.js",
     "lint": "eslint . --max-warnings 0",
