--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "@types/node": "22.15.3",
     "concurrently": "9.2.1",
     "eslint": "9.34.0",
+    "pino-pretty": "13.1.2",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.9.2"
