feat: adds prisma

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,12 +1,19 @@
 PORT=3001
 
-# Supabase Configuration
-SUPABASE_URL=your_supabase_project_url
-SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
-SUPABASE_STORAGE_BUCKET=your_bucket_name
-
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
+
+# Supabase Configuration
+SUPABASE_URL=https://[PROJECT-REF].supabase.co
+SUPABASE_ANON_KEY=your_anon_key
+SUPABASE_STORAGE_BUCKET=documents
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+
+# Database Configuration
+# Transaction pooler for Prisma migrations and db pull/push (port 6543)
+DATABASE_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-1-ap-northeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+# Session pooler for app connections (port 5432)
+DIRECT_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres"
 
 # Inngest Configuration (optional)
 INNGEST_EVENT_KEY=your_inngest_event_key
