--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,12 +8,16 @@
     "build": "tsup",
     "start": "node dist/index.js",
     "lint": "eslint . --max-warnings 0",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "db:gen": "prisma generate"
   },
   "dependencies": {
     "@fastify/multipart": "9.2.1",
     "@langchain/core": "1.0.1",
     "@langchain/openai": "1.0.0",
+    "@prisma/client": "^6.18.0",
     "@supabase/supabase-js": "2.76.1",
     "dotenv": "16.4.7",
     "fastify": "5.2.0",
@@ -27,6 +31,7 @@
     "concurrently": "9.2.1",
     "eslint": "9.34.0",
     "pino-pretty": "13.1.2",
+    "prisma": "^6.18.0",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.9.2"
