--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,11 +17,13 @@
     "@fastify/multipart": "9.2.1",
     "@langchain/core": "1.0.1",
     "@langchain/openai": "1.0.0",
+    "@langchain/textsplitters": "^1.0.0",
     "@prisma/client": "^6.18.0",
     "@supabase/supabase-js": "2.76.1",
     "dotenv": "16.4.7",
     "fastify": "5.2.0",
     "inngest": "3.44.3",
+    "langchain": "^1.0.2",
     "pdf-parse": "2.4.5"
   },
   "devDependencies": {
