--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "db:gen": "prisma generate"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "@fastify/multipart": "9.2.1",
     "@langchain/core": "1.0.1",
     "@langchain/openai": "1.0.0",
