--- a/apps/chat-widget/package.json
+++ b/apps/chat-widget/package.json
@@ -30,11 +30,14 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.34.0",
-    "typescript": "^5.9.2",
-    "vite": "^6.0.11"
+    "@tailwindcss/vite": "4.1.16",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "@vitejs/plugin-react": "4.3.4",
+    "eslint": "9.34.0",
+    "tailwindcss": "4.1.16",
+    "typescript": "5.9.2",
+    "vite": "6.0.11",
+    "vite-plugin-css-injected-by-js": "3.5.2"
   }
 }
