feat: adds @repo/dto and fixes RAG retrieval issues

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
     "@langchain/openai": "1.0.0",
     "@langchain/textsplitters": "^1.0.0",
     "@prisma/client": "^6.18.0",
+    "@repo/dto": "workspace:*",
     "@supabase/supabase-js": "2.76.1",
     "dotenv": "16.4.7",
     "fastify": "5.2.0",
