--- a/apps/chat-widget/package.json
+++ b/apps/chat-widget/package.json
@@ -24,6 +24,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@repo/dto": "workspace:*",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
