--- a/apps/chat-widget/package.json
+++ b/apps/chat-widget/package.json
@@ -24,9 +24,12 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.2",
     "@repo/dto": "workspace:*",
+    "clsx": "^2.1.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
