--- a/apps/chat-widget/package.json
+++ b/apps/chat-widget/package.json
@@ -29,14 +29,15 @@
     "clsx": "^2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-shadow": "^20.6.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@tailwindcss/vite": "4.1.16",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
     "@vitejs/plugin-react": "4.3.4",
     "eslint": "9.34.0",
     "tailwindcss": "4.1.16",
