fix: better ui for chat widget

--- a/apps/chat-widget/package.json
+++ b/apps/chat-widget/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@iconify/react": "^6.0.2",
+    "@radix-ui/react-popover": "^1.1.15",
     "@repo/dto": "workspace:*",
     "clsx": "^2.1.1",
     "react": "^19.1.0",
