--- a/apps/chat-widget/package.json
+++ b/apps/chat-widget/package.json
@@ -41,6 +41,8 @@
     "@types/react-dom": "19.1.1",
     "@vitejs/plugin-react": "4.3.4",
     "eslint": "9.34.0",
+    "rollup-plugin-filesize": "10.0.0",
+    "rollup-plugin-visualizer": "5.12.0",
     "tailwindcss": "4.1.16",
     "typescript": "5.9.2",
     "vite": "6.0.11",
