--- a/apps/helpdesk/package.json
+++ b/apps/helpdesk/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@repo/dto": "workspace:*",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
