--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,8 @@
     "OPENAI_API_KEY",
     "SUPABASE_URL",
     "SUPABASE_SERVICE_ROLE_KEY",
-    "SUPABASE_STORAGE_BUCKET"
+    "SUPABASE_STORAGE_BUCKET",
+    "CORS_ORIGINS"
   ],
   "tasks": {
     "build": {
