--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,19 +14,19 @@
     "db:gen": "prisma generate"
   },
   "dependencies": {
-    "@fastify/cors": "^11.1.0",
+    "@fastify/cors": "11.1.0",
     "@fastify/multipart": "9.2.1",
-    "@fastify/websocket": "^11.2.0",
+    "@fastify/websocket": "11.2.0",
     "@langchain/core": "1.0.1",
     "@langchain/openai": "1.0.0",
-    "@langchain/textsplitters": "^1.0.0",
-    "@prisma/client": "^6.18.0",
+    "@langchain/textsplitters": "1.0.0",
+    "@prisma/client": "6.18.0",
     "@repo/dto": "workspace:*",
     "@supabase/supabase-js": "2.76.1",
     "dotenv": "16.4.7",
     "fastify": "5.2.0",
     "inngest": "3.44.3",
-    "langchain": "^1.0.2",
+    "langchain": "1.0.2",
     "pdf-parse": "2.4.5",
     "ws": "8.18.0"
   },
@@ -38,7 +38,7 @@
     "concurrently": "9.2.1",
     "eslint": "9.34.0",
     "pino-pretty": "13.1.2",
-    "prisma": "^6.18.0",
+    "prisma": "6.18.0",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.9.2"
