--- a/apps/helpdesk/package.json
+++ b/apps/helpdesk/package.json
@@ -10,18 +10,18 @@
   },
   "dependencies": {
     "@repo/dto": "workspace:*",
-    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-popover": "1.1.15",
-    "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "class-variance-authority": "^0.7.1",
+    "@radix-ui/react-separator": "1.1.8",
+    "@radix-ui/react-slot": "1.2.4",
+    "@radix-ui/react-tooltip": "1.2.8",
+    "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "lucide-react": "^0.554.0",
+    "lucide-react": "0.554.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-resizable-panels": "^3.0.6",
+    "react-resizable-panels": "3.0.6",
     "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
@@ -32,7 +32,7 @@
     "eslint": "9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "4",
-    "tw-animate-css": "^1.4.0",
+    "tw-animate-css": "1.4.0",
     "typescript": "5"
   }
 }
