--- a/packages/dto/package.json
+++ b/packages/dto/package.json
@@ -40,13 +40,13 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "zod": "^3.23.8"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^22.15.3",
-    "eslint": "^9.34.0",
+    "@types/node": "22.15.3",
+    "eslint": "9.34.0",
     "typescript": "5.9.2"
   }
 }
