--- a/apps/helpdesk/package.json
+++ b/apps/helpdesk/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@repo/dto": "workspace:*",
+    "@repo/ui": "workspace:*",
     "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-popover": "1.1.15",
     "@radix-ui/react-separator": "1.1.8",
