--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
+    "./content": "./src/content.ts",
     "./*": "./src/*.tsx"
   },
   "scripts": {
@@ -20,7 +21,11 @@
     "typescript": "5.9.2"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "1.1.15",
+    "@repo/dto": "workspace:*",
+    "clsx": "2.1.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "3.3.1"
   }
 }
