--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,26 @@
 node_modules
 .pnp
 .pnp.js
+.pnp.*
 
 # Local env files
 .env
 .env.local
+.env.production
+.env.development
+.env*.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env*
+!.env.example
+
+# Yarn (Berry)
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # Testing
 coverage
@@ -26,13 +39,36 @@ coverage
 out/
 build
 dist
+apps/chat-widget/dist-ssr/
 
+# Generated sources
+apps/api/src/generated/prisma
+
+# Chat widget app artifacts
+apps/chat-widget/logs
+apps/chat-widget/**/*.log
+apps/chat-widget/**/*.local
+apps/chat-widget/.vscode/*
+!apps/chat-widget/.vscode/extensions.json
+apps/chat-widget/.vite
 
 # Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # Misc
 .DS_Store
 *.pem
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
