feat(web): add microfrontends configuration

--- a/apps/helpdesk/package.json
+++ b/apps/helpdesk/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3003",
+    "dev": "next dev --turbopack --port $(microfrontends port)",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "@repo/dto": "workspace:*",
-    "@repo/ui": "workspace:*",
     "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-popover": "1.1.15",
     "@radix-ui/react-separator": "1.1.8",
     "@radix-ui/react-slot": "1.2.4",
     "@radix-ui/react-tooltip": "1.2.8",
+    "@repo/dto": "workspace:*",
+    "@repo/ui": "workspace:*",
+    "@vercel/microfrontends": "^2.2.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.554.0",
