--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3002",
+    "dev": "next dev --turbopack --port $(microfrontends port)",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
@@ -44,6 +44,7 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
+    "@vercel/microfrontends": "^2.2.0",
     "eslint": "^9.34.0",
     "typescript": "5.9.2"
   }
