--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,5 +1,8 @@
 PORT=3001
 
+# CORS Configuration
+CORS_ORIGINS="http://localhost:3000,http://localhost:3003,http://localhost:5173,http://localhost:4173"
+
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
 
