--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,7 +1,7 @@
 PORT=3001
 
 # CORS Configuration
-CORS_ORIGINS="http://localhost:3000,http://localhost:3003,http://localhost:5173,http://localhost:4173"
+CORS_ORIGINS="http://localhost:3000,http://localhost:3002"
 
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
