chore(db): add docker-compose, expand db scripts, link workspace deps
Add a docker-compose.yml for a Postgres (pgvector) service to enable local DB
development. Update packages/db: adjust .gitignore (prisma/generated) and remove
--skip-generate from prisma migrate to ensure client generation runs during
migrations.

Expose a set of db-related turbo scripts in the repository root (db:push,
db:studio, db:generate, db:migrate, db:start, db:watch, db:stop, db:down) that
forward to @repo/db to standardize how DB tasks are executed across the
monorepo.

Wire workspace dependencies into apps/api package.json (@repo/auth,
@repo/db, @repo/dto already present) and add the "better-auth" catalog entry
so the API can resolve local packages during development.

These changes simplify local DB setup, unify DB commands, and ensure workspace
packages are properly linked for development and CI.

--- a/turbo.json
+++ b/turbo.json
@@ -12,23 +12,67 @@
   ],
   "tasks": {
     "build": {
-      "dependsOn": ["db:generate", "^build"],
-      "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
+      "dependsOn": [
+        "db:generate",
+        "^build"
+      ],
+      "inputs": [
+        "$TURBO_DEFAULT$",
+        ".env*"
+      ],
+      "outputs": [
+        ".next/**",
+        "!.next/cache/**",
+        "dist/**"
+      ]
     },
     "lint": {
-      "dependsOn": ["^lint"]
+      "dependsOn": [
+        "^lint"
+      ]
     },
     "check-types": {
-      "dependsOn": ["^check-types"]
+      "dependsOn": [
+        "^check-types"
+      ]
     },
     "dev": {
-      "dependsOn": ["db:generate"],
+      "dependsOn": [
+        "db:generate"
+      ],
+      "cache": false,
+      "persistent": true
+    },
+    "db:push": {
+      "cache": false,
+      "persistent": true
+    },
+    "db:studio": {
+      "cache": false,
+      "persistent": true
+    },
+    "db:migrate": {
       "cache": false,
       "persistent": true
     },
     "db:generate": {
       "cache": false
+    },
+    "db:start": {
+      "cache": false,
+      "persistent": true
+    },
+    "db:stop": {
+      "cache": false,
+      "persistent": true
+    },
+    "db:watch": {
+      "cache": false,
+      "persistent": true
+    },
+    "db:down": {
+      "cache": false,
+      "persistent": true
     }
   }
 }
