--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,8 @@
     "db:gen": "prisma generate"
   },
   "dependencies": {
+    "@repo/auth": "workspace:*",
+    "@repo/db": "workspace:*",
     "@fastify/cors": "11.1.0",
     "@fastify/multipart": "9.2.1",
     "@fastify/websocket": "11.2.0",
@@ -23,6 +25,7 @@
     "@prisma/client": "6.18.0",
     "@repo/dto": "workspace:*",
     "@supabase/supabase-js": "2.76.1",
+    "better-auth": "catalog:",
     "dotenv": "16.4.7",
     "fastify": "5.2.0",
     "inngest": "3.44.3",
