--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,10 +1,5 @@
-# DATABASE_URL=postgresql://postgres:postgres@127.0.0.1:54322/postgres
-
-# Connect to Supabase via connection pooling
-# DATABASE_URL="postgresql://postgres.yfhgwosiuxohhsypwuft:KLgVDX3Md1GX1mwq@aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
-
-# # Direct connection to the database. Used for migrations
-# SHADOW_DATABASE_URL="postgresql://postgres.yfhgwosiuxohhsypwuft:KLgVDX3Md1GX1mwq@aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres"
+# Docker DB
+# DATABASE_URL=postgresql://postgres:password@localhost:5432/jexity-chatbot
 
 DATABASE_URL=''
 
