--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
-    "db:migrate": "turbo run db:migrate"
+    "db:push": "turbo -F @repo/db db:push",
+    "db:studio": "turbo -F @repo/db db:studio",
+    "db:generate": "turbo -F @repo/db db:generate",
+    "db:migrate": "turbo -F @repo/db db:migrate",
+    "db:start": "turbo -F @repo/db db:start",
+    "db:watch": "turbo -F @repo/db db:watch",
+    "db:stop": "turbo -F @repo/db db:stop",
+    "db:down": "turbo -F @repo/db db:down"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
