--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,11 +5,12 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev --skip-generate",
+    "db:migrate": "prisma migrate dev",
     "db:deploy": "prisma migrate deploy",
-    "supabase:status": "pnpx supabase status",
-    "supabase:start": "pnpx supabase start",
-    "supabase:stop": "pnpx supabase stop"
+    "db:start": "docker-compose up -d",
+    "db:watch": "docker-compose up",
+    "db:stop": "docker-compose stop",
+    "db:down": "docker-compose down"
   },
   "exports": {
     ".": "./src/index.ts",
@@ -18,7 +19,6 @@
   "devDependencies": {
     "@types/pg": "^8.15.6",
     "prisma": "^7.1.0",
-    "supabase": "^2.58.5",
     "tsx": "4.19.2"
   },
   "dependencies": {
