feat(cli/logs): add logs package and CLI seed/create-user
Add a new @repo/logs package with a shared logger and export, and introduce CLI tooling for project maintenance:
- Add tooling scripts (index.ts, seed.ts and create-user) to seed the database and create users interactively.
- Add root npm scripts (cli:create-user, cli:seed) to invoke the CLI tooling via pnpm filter.
- Add OPENAI_API_KEY to apps/web/.env.example for new integrations.
- Set "type": "module" for @repo/db and update dotenv entries to use catalog: (delegating resolution to the catalog/workspace setup).

These changes centralize logging utilities and provide developer-friendly CLI commands for seeding and user management.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "db:start": "turbo -F @repo/db db:start",
     "db:watch": "turbo -F @repo/db db:watch",
     "db:stop": "turbo -F @repo/db db:stop",
-    "db:down": "turbo -F @repo/db db:down"
+    "db:down": "turbo -F @repo/db db:down",
+    "cli:create-user": "pnpm --filter @repo/cli create-user",
+    "cli:seed": "pnpm --filter @repo/cli seed"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
