--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -9,6 +9,8 @@ BETTER_AUTH_URL=http://localhost:3000
 RESEND_API_KEY=''
 EMAIL_FROM=''
 
+OPENAI_API_KEY=""
+
 SEED_PASSWORD="Password123!"
 SEED_ADMIN_EMAIL="admin@example.com"
 SEED_OWNER_EMAIL="owner@example.com"
