--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "better-auth": "^1.3.34",
-    "dotenv": "^16.4.7",
+    "dotenv": "catalog:",
     "@repo/db": "workspace:*",
     "@repo/mail": "workspace:*"
   },
