--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@repo/db",
   "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
@@ -24,7 +25,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.1.0",
-    "dotenv": "16.4.7",
+    "dotenv": "catalog:",
     "pg": "^8.16.3"
   }
 }
