refactor(api): use shared prisma client and add dotenv-cli
Replace per-file PrismaClient instantiations with a single shared prisma import from @repo/db to avoid connection pool exhaustion. Enable loading .env in local development by using dotenv-cli in the dev script and adding it to dependencies. Also add a local DATABASE_URL example to .env.example for Docker Compose and update pnpm-lock accordingly.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -13,6 +13,8 @@ SUPABASE_STORAGE_BUCKET=documents
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
 
 # Database Configuration
+# Docker compose local development
+DATABASE_URL=postgresql://postgres:password@localhost:5432/jexity-chatbot
 # Transaction pooler for Prisma migrations and db pull/push (port 6543)
 DATABASE_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-1-ap-northeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
 # Session pooler for app connections (port 5432)
