chore(cli): add README docs for CLI and update scripts
Document the new CLI tooling in README (create-user, seed, seed:auth, seed:chat), include default seed data and environment variable options, and add package entries for @repo/auth, @repo/logs and @repo/cli under tooling.

Update package.json dev scripts to use @repo/scripts (pnpm --filter) and add cli:seed:auth and cli:seed:chat commands so seeding can be run selectively. These changes improve developer onboarding and make local seeding/user creation easier.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "db:watch": "turbo -F @repo/db db:watch",
     "db:stop": "turbo -F @repo/db db:stop",
     "db:down": "turbo -F @repo/db db:down",
-    "cli:create-user": "pnpm --filter @repo/cli create-user",
-    "cli:seed": "pnpm --filter @repo/cli seed"
+    "cli:create-user": "pnpm --filter @repo/scripts create-user",
+    "cli:seed": "pnpm --filter @repo/scripts seed",
+    "cli:seed:auth": "pnpm --filter @repo/scripts seed:auth",
+    "cli:seed:chat": "pnpm --filter @repo/scripts seed:chat"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
