chore(db): downgrade postgres image to pg17 and format README tables

--- a/packages/db/docker-compose.yml
+++ b/packages/db/docker-compose.yml
@@ -2,7 +2,7 @@ name: jexity-chatbot
 
 services:
   postgres:
-    image: pgvector/pgvector:pg18-trixie
+    image: pgvector/pgvector:pg17
     container_name: jexity-chatbot-postgres
     environment:
       POSTGRES_DB: jexity-chatbot
