docs: add DEPLOYMENT.md and ignore Prisma generated files
Add a comprehensive DEPLOYMENT.md that documents production deployment workflows, Prisma migrate vs deploy guidance, CI/CD setup, environment strategies, and platform-specific notes (Neon, Hetzner). This centralizes operational procedures and best practices for staging/production deployments.

Update .gitignore to exclude packages/db/prisma/generated so generated Prisma client artifacts are not committed.

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ apps/chat-widget/dist-ssr/
 
 # Generated sources
 apps/api/src/generated/prisma
+packages/db/prisma/generated
 
 # Chat widget app artifacts
 apps/chat-widget/logs
