feat(auth): add runtime baseURL, trustedOrigins, and logging
Add runtime baseURL resolution (Vercel env / BETTER_AUTH_URL / localhost) and set trustedOrigins in the better-auth config. Hook an onAPIError handler that forwards errors to the centralized @repo/logs logger to capture API errors.

Also:
- Import logger and add @repo/logs as a workspace dependency (updated package.json and pnpm lock).
- Annotate authClient in the web app with ReturnType<typeof createAuthClient> for stronger typing.
- Simplify turborepo env handling: use globalDependencies for env files and set globalEnv to "*" for more consistent environment propagation.

These changes ensure correct base URLs across deployments and improved error observability.

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -16,7 +16,8 @@
     "better-auth": "^1.3.34",
     "dotenv": "catalog:",
     "@repo/db": "workspace:*",
-    "@repo/mail": "workspace:*"
+    "@repo/mail": "workspace:*",
+    "@repo/logs": "workspace:*"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
